crates/cli/tests/snapshots/useless_has_attr__fix_dcdeee74e5d10b5199175881fce69d02c82ff9084bcc346492482aa279e29160.snap
---
source: crates/cli/tests/useless_has_attr.rs
expression: "\"if x.a ? b then x.a.b else default\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x.a ? b then x.a.b else default
+x.a.b or default
