crates/cli/tests/snapshots/useless_has_attr__fix_f5edc729a910faa40ea89cb086561a4390af9bdbc4fa3ffdee8e1ce406fba484.snap
---
source: crates/cli/tests/useless_has_attr.rs
expression: "\"if x ? a then x.a else b.c\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x ? a then x.a else b.c
+x.a or b.c
