crates/cli/tests/snapshots/useless_has_attr__lint_514032635e11fe0f21c05881885de04587ba8db14854db99efccb6bb57f7bf8c.snap
---
source: crates/cli/tests/useless_has_attr.rs
expression: "\"if x ? a then x.a else default\""
---
[W19] Warning: This `if` expression can be simplified with `or`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if x ? a then x.a else default
   · ───────────────┬──────────────  
   ·                ╰──────────────── Consider using x.a or default instead of this if expression
───╯
