crates/cli/tests/snapshots/useless_has_attr__lint_9361572e1b83dd76c88aa8af9b983c7f255936c0326d983f21be6622852e970d.snap
---
source: crates/cli/tests/useless_has_attr.rs
expression: "\"if x ? a then x.a else if b then c else d\""
---
[19] Warning: This `if` expression can be simplified with `or`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if x ? a then x.a else if b then c else d
   · ────────────────────┬────────────────────  
   ·                     ╰────────────────────── Consider using x.a or (if b then c else d) instead of this if expression
───╯
