crates/cli/tests/snapshots/useless_has_attr__lint_f5edc729a910faa40ea89cb086561a4390af9bdbc4fa3ffdee8e1ce406fba484.snap
---
source: crates/cli/tests/useless_has_attr.rs
expression: "\"if x ? a then x.a else b.c\""
---
[19] Warning: This `if` expression can be simplified with `or`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if x ? a then x.a else b.c
   │ ─────────────┬────────────  
   │              ╰────────────── Consider using x.a or b.c instead of this if expression
───╯
